OA-34: Minor fixes to improve rendering on IE.
git-svn-id: svn://svn.code.sf.net/p/oquote/code@1136 22cb28ec-0345-0410-b6dc-f8d001edd02c

--- a/root/projects/openunderwriter/2.0/ghana-theme.war/css/custom.css
+++ b/root/projects/openunderwriter/2.0/ghana-theme.war/css/custom.css
@@ -66,6 +66,10 @@ hr, .separator {
     position: relative;
 }
 
+.ie .portlet-borderless-container {
+    border: 1px solid #C8C9CA;
+}
+
 .site-title .site-name {
     background: #555 url(../images/common/site_icon.png) no-repeat 15px 50%;
     color: #FFF;
